update notebooks to remove multiprocessing update dockerhub images used in notebooks remove dedicated cell for papermill, instead rag the local testing cell as parameters update dockstore yaml to include author info update readme file to fix typos and links

--- a/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -101,30 +101,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "masmaHkeC1Al"
-      },
-      "source": [
-        "### **Parameters for running this notebook with Papermill python package in cloud**"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "3RFWd8GDC4g9",
-        "tags": [
-          "parameters"
-        ]
-      },
-      "outputs": [],
-      "source": [
-        "#csv and inference file paths are provided as input when running on cloud\n",
-        "inferenceNiftiFilePath=''"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "zfrNp2OmC942"
       },
       "source": [
@@ -339,14 +315,18 @@
         "id": "hLs3PeApaMQv"
       },
       "source": [
-        "### **Input files for local testing**"
+        "### **Input files for local testing**\n",
+        "Below cell is tagged as `parameters` so that when this notebook is used in cloud, papermill will inject a cell to pass the path of the inferenceNiftiFilePath"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "smIAQvIiaPTO"
+        "id": "smIAQvIiaPTO",
+        "tags": [
+          "parameters"
+        ]
       },
       "outputs": [],
       "source": [
@@ -915,16 +895,11 @@
         "        int(x) for x in np.unique(nib.load(seg_file).get_fdata()).tolist() if x != 0\n",
         "    ]\n",
         "\n",
-        "    # NB: while testing, use the line below to process just a subset of segments\n",
-        "    # labels = labels[:3]\n",
-        "    print(\"Total number of labels: \"+str(len(labels)))\n",
-        "\n",
         "    # Define the function to be applied to each label\n",
         "    func = partial(extract_radiomics_features_from_one_label, seg_file, ct_file, label_id_body_part_df)\n",
         "\n",
-        "    # Use a multiprocessing pool to apply the function to all labels\n",
-        "    with multiprocessing.Pool() as pool:\n",
-        "        results = list(tqdm(pool.imap(func, labels), total=len(labels)))\n",
+        "    # Apply the function to all labels sequentially\n",
+        "    results = [func(label) for label in tqdm(labels)]\n",
         "\n",
         "    # Process the results\n",
         "    for body_part, mask_stats, raw_features in results:\n",
