--- a/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb
@@ -78,34 +78,13 @@
         "    <pre>\n",
         "    papermill endToEndTotalSegmentatorNotebook.ipynb outputendToEndTotalSegmentatorNotebook.ipynb -y SeriesInstanceUIDs yamlListOfSeriesInstanceUIDs\n",
         "    </pre>\n",
-        "    * refer to https://papermill.readthedocs.io/en/latest/usage-execute.html#note-about-using-yaml on how to pass the yaml list\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hLs3PeApaMQv"
-      },
-      "source": [
-        "### **Parameters for papermill**\n",
+        "    * refer to https://papermill.readthedocs.io/en/latest/usage-execute.html#note-about-using-yaml on how to pass the yaml list\n",
         "\n",
-        "These are the parameters used when running this notebook in non interactive mode on Terra or Seven Bridges Genomics- Cancer Genomics Cloud platforms\n",
-        "\n",
-        "You can ignore them while running in interactive mode on colab for example"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "3RFWd8GDC4g9",
-        "tags": [
-          "parameters"
-        ]
-      },
-      "outputs": [],
-      "source": [
-        "SeriesInstanceUIDs=[]"
+        "    Instead of passing the yaml list as a string, a yaml file can also be passed, as we do for SB-CGC\n",
+        "    [an example can be found here](!https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/sampleManifests/batch_1.yaml)\n",
+        "    <pre>\n",
+        "    papermill endToEndTotalSegmentatorNotebook.ipynb outputendToEndTotalSegmentatorNotebook.ipynb -f path_to_yamlListOfSeriesInstanceUIDs.yaml\n",
+        "    </pre>\n"
       ]
     },
     {
@@ -331,14 +310,19 @@
       },
       "source": [
         "### **Local testing**\n",
-        "By default, in interactive mode, a list of seriesInstanceUIDs are chosen  here. However, you can modify them to your usecase."
+        "By default, in interactive mode, a list of seriesInstanceUIDs are chosen  here. However, you can modify them to your usecase.\n",
+        "\n",
+        "Below cell is also tagged as `parameters`, so that when running this notebook in non interactive mode on Terra or Seven Bridges Genomics- Cancer Genomics Cloud platforms, papermill will inject a cell to pass the yaml list of SeriesInstanceUIDs"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "smIAQvIiaPTO"
+        "id": "smIAQvIiaPTO",
+        "tags": [
+          "parameters"
+        ]
       },
       "outputs": [],
       "source": [
@@ -356,8 +340,7 @@
         "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100962349324934756610763981593',\n",
         "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.100993923831797845405183790593',\n",
         "                      '1.3.6.1.4.1.14519.5.2.1.7009.9004.101126369092366339550409924127'\n",
-        "                      ]\n",
-        "\n"
+        "                      ]"
       ]
     },
     {
@@ -959,9 +942,8 @@
         "    # Define the function to be applied to each label\n",
         "    func = partial(extract_radiomics_features_from_one_label, seg_file, ct_file, label_id_body_part_df)\n",
         "\n",
-        "    # Use a multiprocessing pool to apply the function to all labels\n",
-        "    with multiprocessing.Pool() as pool:\n",
-        "        results = list(tqdm(pool.imap(func, labels), total=len(labels)))\n",
+        "    # Apply the function to all labels sequentially\n",
+        "    results = [func(label) for label in tqdm(labels)]\n",
         "\n",
         "    # Process the results\n",
         "    for body_part, mask_stats, raw_features in results:\n",
@@ -1572,9 +1554,9 @@
         "                except subprocess.CalledProcessError:\n",
         "                    print(\"Error: Failed to move files using both commands\")\n",
         "\n",
-        "            !mv Inference/{series_id}/segmentations.nii Inference/{series_id}/{series_id}.nii\n",
-        "\n",
         "            check_total_segmentator_errors(series_id)\n",
+        "            \n",
+        "            !mv Inference/{series_id}/segmentations.nii Inference/{series_id}/{series_id}.nii\n",
         "\n",
         "            #dicomseg\n",
         "            start_time = time.time()\n",
