--- a/workflows/TotalSegmentator/Notebooks/inferenceTotalSegmentatorNotebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/inferenceTotalSegmentatorNotebook.ipynb
@@ -100,33 +100,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8l5mWkLoRGVX"
-      },
-      "source": [
-        "### **Parameters for papermill**\n",
-        "\n",
-        "These are the parameters used when running this notebook in non interactive mode on Terra or Seven Bridges Genomics- Cancer Genomics Cloud platforms\n",
-        "\n",
-        "You can ignore them while running in interactive mode on colab for example"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "JJ-g6Lw2RDUp",
-        "tags": [
-          "parameters"
-        ]
-      },
-      "outputs": [],
-      "source": [
-        "niftiFilePath=''\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "_jcGevLmr3JW"
       },
       "source": [
@@ -244,14 +217,19 @@
       "source": [
         "### **For local testing**\n",
         "\n",
-        "By default a sample manifest containing CT NIfTI files are chosen  here. However, you can modify them to your usecase."
+        "By default a sample manifest containing CT NIfTI files are chosen  here. However, you can modify them to your usecase.\n",
+        "\n",
+        "Below cell is also tagged as `parameters`, so that when running this notebook in non interactive mode on Terra or Seven Bridges Genomics- Cancer Genomics Cloud platforms, papermill will inject a cell to pass the path of the CT NIfTI files"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "u3QXHGDp2htr"
+        "id": "u3QXHGDp2htr",
+        "tags": [
+          "parameters"
+        ]
       },
       "outputs": [],
       "source": [
