--- a/workflows/TotalSegmentator/Notebooks/downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb
@@ -79,34 +79,13 @@
         "    <pre>\n",
         "    papermill downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb outputdownloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb -y SeriesInstanceUIDs yamlListOfSeriesInstanceUIDs\n",
         "    </pre>\n",
-        "    * refer to https://papermill.readthedocs.io/en/latest/usage-execute.html#note-about-using-yaml on how to pass the yaml list"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8l5mWkLoRGVX"
-      },
-      "source": [
-        "### **Parameters for papermill**\n",
+        "    * refer to https://papermill.readthedocs.io/en/latest/usage-execute.html#note-about-using-yaml on how to pass the yaml list\n",
         "\n",
-        "These are the parameters used when running this notebook in non interactive mode on Terra or Seven Bridges Genomics- Cancer Genomics Cloud platforms\n",
-        "\n",
-        "You can ignore them while running in interactive mode on colab for example"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "JJ-g6Lw2RDUp",
-        "tags": [
-          "parameters"
-        ]
-      },
-      "outputs": [],
-      "source": [
-        "SeriesInstanceUIDs=[]"
+        "    Instead of passing the yaml list as a string, a yaml file can also be passed, as we do for SB-CGC\n",
+        "    [an example can be found here](!https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/sampleManifests/batch_1.yaml)\n",
+        "    <pre>\n",
+        "    papermill downloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb outputdownloadDicomAndConvertAndInferenceTotalSegmentatorNotebook.ipynb -f path_to_yamlListOfSeriesInstanceUIDs.yaml\n",
+        "    </pre>"
       ]
     },
     {
@@ -290,18 +269,24 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Dg6rEeM6tuQJ"
+        "id": "Dg6rEeM6tuQJ",
+        "tags": []
       },
       "source": [
         "### **Local testing**\n",
-        "By default, in interactive mode, a list of seriesInstanceUIDs are chosen  here. However, you can modify them to your usecase."
+        "By default, in interactive mode, a list of seriesInstanceUIDs are chosen  here. However, you can modify them to your usecase.\n",
+        "\n",
+        "Below cell is also tagged as `parameters`, so that when running this notebook in non interactive mode on Terra or Seven Bridges Genomics- Cancer Genomics Cloud platforms, papermill will inject a cell to pass the yaml list of SeriesInstanceUIDs"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "DHaIwv0stya4"
+        "id": "DHaIwv0stya4",
+        "tags": [
+          "parameters"
+        ]
       },
       "outputs": [],
       "source": [
