--- a/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -15,7 +15,7 @@
         "id": "EHS1DmzV54av"
       },
       "source": [
-        "# **This Notebook generates DICOM Seg objects and DICOM Structured Reports with Segmentation Maps and the corresponding csv manifest containing the download urls to CT DICOM files as the input**"
+        "# **This Notebook generates DICOM Seg objects and DICOM Structured Reports with Segmentation Maps as the input**"
       ]
     },
     {
@@ -1490,7 +1490,7 @@
         "        seg_dcm = dcmread(f\"itkimage2segimage/{series_id}/{series_id}.dcm\")\n",
         "\n",
         "        # Get the SOPInstanceUID of the segmentation\n",
-        "        SOPInstanceUID_seg = seg_dcm.file_meta[\"0x0002\", \"0x0003\"].value\n",
+        "        SOPInstanceUID_seg = seg_dcm.SOPInstanceUID\n",
         "\n",
         "        # Define the segmentation file and DICOM directory\n",
         "        seg_file = f\"{series_id}.dcm\"\n",
@@ -1617,10 +1617,10 @@
         "            cpu = psutil.cpu_percent()\n",
         "            ram = psutil.virtual_memory()\n",
         "            disk_usage = psutil.disk_usage(self.working_disk_path)\n",
-        "            disk_used = disk_usage.used / 1024 / 1024 / 1024\n",
-        "            disk_total = disk_usage.total / 1024 / 1024 / 1024\n",
-        "            ram_total_mb = ram.total / 1024 / 1024\n",
-        "            ram_mb = (ram.total - ram.available) / 1024 / 1024\n",
+        "            disk_used = disk_usage.used / 1000 / 1000 / 1000\n",
+        "            disk_total = disk_usage.total / 1000 / 1000 / 1000\n",
+        "            ram_total_mb = ram.total / 1000 / 1000\n",
+        "            ram_mb = (ram.total - ram.available) / 1000 / 1000\n",
         "\n",
         "            cpu_usage.append(cpu)\n",
         "            ram_usage_mb.append(ram_mb)\n",
