--- a/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb
@@ -1575,7 +1575,7 @@
         "            #structured reports\n",
         "            start_time = time.time()\n",
         "            seg_dcm = dcmread(f\"itkimage2segimage/{series_id}/{series_id}.dcm\")\n",
-        "            SOPInstanceUID_seg = seg_dcm.file_meta[\"0x0002\", \"0x0003\"].value\n",
+        "            SOPInstanceUID_seg = seg_dcm.SOPInstanceUID\n",
         "            seg_file = f\"{series_id}.dcm\"\n",
         "            dicom_directory = f\"idc_data/{series_id}\"\n",
         "            segments_code_mapping_df = totalsegmentator_segments_code_mapping_df\n",
@@ -1699,17 +1699,17 @@
         "            cpu = psutil.cpu_percent()\n",
         "            ram = psutil.virtual_memory()\n",
         "            disk_usage = psutil.disk_usage(self.working_disk_path)\n",
-        "            disk_used = disk_usage.used / 1024 / 1024 / 1024\n",
-        "            disk_total = disk_usage.total / 1024 / 1024 / 1024\n",
-        "            ram_total_mb = psutil.virtual_memory().total / 1024 / 1024\n",
-        "            ram_mb = (ram.total - ram.available) / 1024 / 1024\n",
+        "            disk_used = disk_usage.used / 1000 / 1000 / 1000\n",
+        "            disk_total = disk_usage.total / 1000 / 1000 / 1000\n",
+        "            ram_total_mb = psutil.virtual_memory().total / 1000 / 1000\n",
+        "            ram_mb = (ram.total - ram.available) / 1000 / 1000\n",
         "            try:\n",
         "                nvidia_smi.nvmlInit()\n",
         "                handle = nvidia_smi.nvmlDeviceGetHandleByIndex(0)\n",
         "                info = nvidia_smi.nvmlDeviceGetMemoryInfo(handle)\n",
         "                gpu_type = nvidia_smi.nvmlDeviceGetName(handle)\n",
-        "                gpu_total_mb = info.total/1024/1024\n",
-        "                gpu_mb = info.used/1024/1024\n",
+        "                gpu_total_mb = info.total/1000/1000\n",
+        "                gpu_mb = info.used/1000/1000\n",
         "                nvidia_smi.nvmlShutdown()\n",
         "            except:\n",
         "                gpu_type = ''\n",
