simplify perframe extraction

--- a/workflows/TotalSegmentator/Notebooks/dicomSEGMaps/slicerMappingsTotalSegmentator.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomSEGMaps/slicerMappingsTotalSegmentator.ipynb
@@ -3,8 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "LATi5kf7DkID"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/dicomSEGMaps/slicerMappingsTotalSegmentator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -17,9 +16,7 @@
       },
       "source": [
         "This notebook generates the config map used for creating DICOM SEG files for segmentations created by TotalSegmentator\n",
-        "- The snomed codes for label and label maps are downloaded from official TotalSegmentator repo\n",
-        "- Colors are then chosen from MhubAI\n",
-        "- Lastly some colors are replaced by the ones chosen by Deepa"
+        "- The snomed codes for label and label maps are downloaded from official TotalSegmentator repo"
       ]
     },
     {
@@ -64,7 +61,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Y_A5p88zR3WV"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y_A5p88zR3WV",
+        "outputId": "867e3579-fa1c-4287-83f8-8ef56d9ab06a"
       },
       "outputs": [],
       "source": [
@@ -83,8 +84,8 @@
         "id": "9csIzy2W4psO"
       },
       "source": [
-        "**map_to_binary.py contains the mapping of labels and body parts and totalsegmentator_snomed_mapping.csv contains the body part to snomed codes.\n",
-        "Parsing only total_v1 label map as we have colors only for the v1**"
+        "- map_to_binary.py contains the mapping of labels and body parts\n",
+        "- totalsegmentator_snomed_mapping_with_partial_colors has snomed codes and colors"
       ]
     },
     {
@@ -100,7 +101,7 @@
         "except OSError:\n",
         "  pass\n",
         "!wget -q  https://raw.githubusercontent.com/wasserth/TotalSegmentator/v2.0.5/totalsegmentator/map_to_binary.py\n",
-        "!wget -q  https://raw.githubusercontent.com/wasserth/TotalSegmentator/1691bb8cd27a9ab78c2da3acef4dddf677c7dd24/resources/totalsegmentator_snomed_mapping.csv\n",
+        "!wget -q  https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/resources/totalsegmentator_snomed_mapping_with_partial_colors.csv\n",
         "import map_to_binary"
       ]
     },
@@ -108,283 +109,79 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "er1ul4-Ldh1B"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 669
+        },
+        "id": "RkQgPZ_BPzO1",
+        "outputId": "4d90298d-fb7b-4f45-fb15-a34b641ea5fa"
       },
       "outputs": [],
       "source": [
-        "label_id_body_part_data = map_to_binary.class_map['total_v1']\n",
-        "label_id_body_part_data_df = pd.DataFrame(list(label_id_body_part_data.items()), columns=['labelID', 'Structure'])\n",
-        "#label_id_body_part_data_df= label_id_body_part_data_df.astype(str)\n",
-        "label_id_body_part_data_df"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "z7JS5cqb97LH"
-      },
-      "outputs": [],
-      "source": [
-        "totalsegmentator_snomed_mapping_df=pd.read_csv('totalsegmentator_snomed_mapping.csv', encoding='utf-8',dtype='str')\n",
-        "totalsegmentator_snomed_mapping_df"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "I7_60-sw_E5Q"
-      },
-      "source": [
-        "###Merge label map df and codes df using Structure name as key"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "jP16wtjj_UOF"
-      },
-      "outputs": [],
-      "source": [
-        "totalseg_snomed_mapping_with_labels_df=pd.merge(totalsegmentator_snomed_mapping_df,label_id_body_part_data_df, how='left', left_on='Structure', right_on='Structure' )\n",
-        "totalseg_snomed_mapping_with_labels_df"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "tpfV0-cU4_29"
-      },
-      "source": [
-        "These colors were originally chosen from mhubai' repo. However they labeled all parts as '1' so we can't use them directly\n",
+        "import ast\n",
+        "import pandas as pd\n",
         "\n",
-        "`https://raw.githubusercontent.com/vkt1414/models/main/models/totalsegmentator/config/dicomseg_metadata_whole.json`\n",
+        "# Load label ID and body part data\n",
+        "label_body_map = map_to_binary.class_map[\"total_v1\"]\n",
+        "label_body_df = pd.DataFrame(\n",
+        "    list(label_body_map.items()), columns=[\"labelID\", \"Structure\"]\n",
+        ")\n",
         "\n",
-        "Instead, we will use\n",
-        "`https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.json`\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "HMvbErEXAqvd"
-      },
-      "outputs": [],
-      "source": [
-        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.json"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "PTvVHXObwg0o"
-      },
-      "outputs": [],
-      "source": [
-        "with open('dicomseg_metadata_whole_slicerAsRef.json', 'r') as file:\n",
-        "    json_data = json.load(file)\n",
-        "\n",
-        "# Initialize an empty list to store each DataFrame\n",
-        "data_frames = []\n",
-        "\n",
-        "# Loop through each item in 'segmentAttributes'\n",
-        "for item in json_data['segmentAttributes']:\n",
-        "    # Normalize the item and append the DataFrame to the list\n",
-        "    item_data = pd.json_normalize(item).reset_index(drop=True)\n",
-        "    data_frames.append(item_data)\n",
-        "\n",
-        "# Concatenate all DataFrames in the list\n",
-        "mhubai_colors = pd.concat(data_frames, ignore_index=True)\n",
-        "\n",
-        "mhubai_colors=mhubai_colors[['labelID', 'recommendedDisplayRGBValue']]\n",
-        "#mhubai_colors=mhubai_colors.astype(str)\n",
-        "mhubai_colors"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_35Rue7uBQ5Y"
-      },
-      "source": [
-        "###Colors chosen by Deepa, for differentiating vertebrae and a few other body parts"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "gSh7x2o3BQkQ"
-      },
-      "outputs": [],
-      "source": [
-        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/configs/TotalSegmentator/distinct_vertebrae_ribs_rgb_colors_TotalSegmentator.csv"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "SzyrQ4GNEfEz"
-      },
-      "outputs": [],
-      "source": [
-        "distinct_vertebrae_ribs_colors=pd.read_csv('distinct_vertebrae_ribs_rgb_colors_TotalSegmentator.csv')\n",
-        "distinct_vertebrae_ribs_colors"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "bipOGm5djTyR"
-      },
-      "outputs": [],
-      "source": [
-        "distinct_vertebrae_ribs_colors.dtypes"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aBC1tEybE2WI"
-      },
-      "outputs": [],
-      "source": [
-        "distinct_vertebrae_ribs_colors_with_labels=pd.merge(distinct_vertebrae_ribs_colors,totalseg_snomed_mapping_with_labels_df,how='left',left_on='totalseg_labelname', right_on='Structure')\n",
-        "distinct_vertebrae_ribs_colors_with_labels=distinct_vertebrae_ribs_colors_with_labels[['labelID','recommendedDisplayRGBValue']]\n",
-        "#distinct_vertebrae_ribs_colors_with_labels=distinct_vertebrae_ribs_colors_with_labels.astype(str)\n",
-        "distinct_vertebrae_ribs_colors_with_labels"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mKR2YCILQeBn"
-      },
-      "source": [
-        "##Replace mhubai colors with Deepa's colors whereever possible"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "onpYI1XmQdnP"
-      },
-      "outputs": [],
-      "source": [
-        "# Specify suffixes\n",
-        "mhubai_colors_with_distinct_colors = pd.merge(mhubai_colors, distinct_vertebrae_ribs_colors_with_labels, how='left', left_on='labelID', right_on='labelID', suffixes=('_mhub', '_distinct'))\n",
-        "\n",
-        "# Fill NaN values in the 'distinct' column with 'mhub' values\n",
-        "mhubai_colors_with_distinct_colors['recommendedDisplayRGBValue_distinct'].fillna(mhubai_colors_with_distinct_colors['recommendedDisplayRGBValue_mhub'], inplace=True)\n",
-        "\n",
-        "mhubai_colors_with_distinct_colors.drop(columns=['recommendedDisplayRGBValue_mhub'], inplace=True)\n",
-        "\n",
-        "face_rgb_value = [255, 182, 193]\n",
-        "\n",
-        "# Create a mask for the rows where labelID is 93\n",
-        "mask = mhubai_colors_with_distinct_colors['labelID'] == 93\n",
-        "\n",
-        "# Create an iterable with the same length as the number of rows you're updating\n",
-        "face_rgb_value_iterable = pd.Series([face_rgb_value] * sum(mask))\n",
-        "\n",
-        "# Set the RGB value for labelID 93\n",
-        "mhubai_colors_with_distinct_colors.loc[mask, 'recommendedDisplayRGBValue_distinct'] = face_rgb_value_iterable.values\n",
-        "mhubai_colors_with_distinct_colors"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "VJMU8wAoj4zl"
-      },
-      "outputs": [],
-      "source": [
         "# Function to convert string to list\n",
-        "def convert_str_to_list(s):\n",
+        "def str_to_list(s):\n",
         "    if isinstance(s, list):\n",
-        "        # If s is already a list, return it as it is\n",
+        "        return s\n",
+        "    elif pd.isnull(s):\n",
         "        return s\n",
         "    try:\n",
-        "        # Try to convert string representation of list to actual list\n",
         "        return ast.literal_eval(s)\n",
         "    except ValueError:\n",
-        "        # If ValueError occurs, split the string on ',' and convert each item to int\n",
-        "        return [int(i) for i in s.split(',')]\n",
+        "        return [int(i) for i in s.split(\",\")]\n",
         "\n",
-        "# Apply the function to the 'recommendedDisplayRGBValue_distinct' column\n",
-        "mhubai_colors_with_distinct_colors['recommendedDisplayRGBValue_distinct'] = mhubai_colors_with_distinct_colors['recommendedDisplayRGBValue_distinct'].apply(convert_str_to_list)\n",
-        "mhubai_colors_with_distinct_colors"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "5DgCtQ3kSJ_5"
-      },
-      "outputs": [],
-      "source": [
-        "final_df=pd.merge(totalseg_snomed_mapping_with_labels_df,mhubai_colors_with_distinct_colors,how='left',on='labelID')\n",
-        "final_df=final_df.rename(columns={'recommendedDisplayRGBValue_distinct':'recommendedDisplayRGBValue'})\n",
-        "final_df_without_labelid=final_df.drop(columns=[\"labelID\"])\n",
         "\n",
-        "final_df"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Y5JqYc_gUweD"
-      },
-      "outputs": [],
-      "source": [
-        "final_df_without_labelid.to_csv('totalsegmentator_snomed_mapping_with_partial_colors.csv')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "cbnmlTadESqK"
-      },
-      "outputs": [],
-      "source": [
-        "dcmqi_df=final_df[final_df['recommendedDisplayRGBValue'].notnull()]\n",
-        "dcmqi_df = dcmqi_df[dcmqi_df.columns.drop(list(dcmqi_df.filter(regex='Anatomic')))]\n",
-        "dcmqi_df = dcmqi_df.drop(columns=['Structure'])\n",
-        "dcmqi_df['labelID']=dcmqi_df['labelID'].astype(int)\n",
-        "#dcmqi_df['recommendedDisplayRGBValue']=dcmqi_df['recommendedDisplayRGBValue'].astype(ast.literal_eval)\n",
-        "dcmqi_df['SegmentDescription'] = dcmqi_df.apply(\n",
-        "    lambda row: row['SegmentedPropertyTypeModifierCodeSequence.CodeMeaning'] + ' ' + row['SegmentedPropertyTypeCodeSequence.CodeMeaning']\n",
-        "    if pd.notnull(row['SegmentedPropertyTypeModifierCodeSequence.CodeMeaning']) else row['SegmentedPropertyTypeCodeSequence.CodeMeaning'], axis=1)\n",
-        "dcmqi_df['SegmentAlgorithmName']='TotalSegmentator v1.5.6'\n",
-        "dcmqi_df['SegmentAlgorithmType']='AUTOMATIC'\n",
-        "# dcmqi_df['SegmentedPropertyCategoryCodeSequence.CodeValue']=dcmqi_df['SegmentedPropertyCategoryCodeSequence.CodeValue'].astype(str)\n",
-        "# dcmqi_df['SegmentedPropertyTypeModifierCodeSequence.CodeValue']=dcmqi_df['SegmentedPropertyTypeModifierCodeSequence.CodeValue'].astype(str)\n",
-        "# dcmqi_df['SegmentedPropertyTypeCodeSequence.CodeValue'] = dcmqi_df['SegmentedPropertyTypeCodeSequence.CodeValue'].astype(str)\n",
-        "dcmqi_df.fillna('', inplace=True)\n",
-        "dcmqi_df"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "DHjnOJDHC0YV"
-      },
-      "outputs": [],
-      "source": [
-        "dcmqi_df.to_csv('test.csv')"
+        "# Load mapping data\n",
+        "snomed_mapping_df = pd.read_csv(\n",
+        "    \"totalsegmentator_snomed_mapping_with_partial_colors.csv\",\n",
+        "    encoding=\"utf-8\",\n",
+        "    dtype=\"str\",\n",
+        ")\n",
+        "\n",
+        "# Merge dataframes\n",
+        "merged_df = pd.merge(label_body_df, snomed_mapping_df, how=\"left\", on=\"Structure\")\n",
+        "\n",
+        "# Assign RGB value to labelID 93\n",
+        "#merged_df.loc[\n",
+        "#    merged_df[\"labelID\"] == \"93\", \"recommendedDisplayRGBValue\"\n",
+        "#] = \"[255, 182, 193]\"\n",
+        "\n",
+        "# Convert 'recommendedDisplayRGBValue' from string to list\n",
+        "merged_df[\"recommendedDisplayRGBValue\"] = merged_df[\"recommendedDisplayRGBValue\"].apply(\n",
+        "    str_to_list\n",
+        ")\n",
+        "\n",
+        "# Prepare final dataframe\n",
+        "final_df = merged_df.drop(columns=merged_df.filter(regex=\"Anatomic\").columns)\n",
+        "final_df[\"labelID\"] = final_df[\"labelID\"].astype(int)\n",
+        "final_df[\"SegmentLabel\"] = final_df.apply(\n",
+        "    lambda row: row[\"SegmentedPropertyTypeModifierCodeSequence.CodeMeaning\"]\n",
+        "    + \" \"\n",
+        "    + row[\"SegmentedPropertyTypeCodeSequence.CodeMeaning\"]\n",
+        "    if pd.notnull(row[\"SegmentedPropertyTypeModifierCodeSequence.CodeMeaning\"])\n",
+        "    else row[\"SegmentedPropertyTypeCodeSequence.CodeMeaning\"],\n",
+        "    axis=1,\n",
+        ")\n",
+        "final_df[\"SegmentDescription\"] = (\n",
+        "    \"TotalSegmentator \"\n",
+        "    + final_df[\"labelID\"].astype(str)\n",
+        "    + \" : \"\n",
+        "    + final_df[\"Structure\"]\n",
+        ")\n",
+        "final_df = final_df.drop(columns=[\"Structure\"])\n",
+        "final_df[\"SegmentAlgorithmName\"] = \"TotalSegmentator v1.5.6\"\n",
+        "final_df[\"SegmentAlgorithmType\"] = \"AUTOMATIC\"\n",
+        "final_df.fillna(\"\", inplace=True)\n",
+        "\n",
+        "final_df\n"
       ]
     },
     {
@@ -395,7 +192,7 @@
       },
       "outputs": [],
       "source": [
-        "merged_df_json = json.loads(dcmqi_df.to_json(orient='records'))\n",
+        "merged_df_json = json.loads(final_df.to_json(orient='records'))\n",
         "\n",
         "for segment in merged_df_json:\n",
         "    segment['SegmentedPropertyCategoryCodeSequence'] = {\n",
@@ -436,7 +233,7 @@
         "    \"SeriesNumber\": \"42\",\n",
         "    \"segmentAttributes\": [merged_df_json]\n",
         "}\n",
-        "with open('dicomseg_metadata_totalseg_v1.json', 'w') as file:\n",
+        "with open('dicomseg_metadata_whole_slicerAsRef.json', 'w') as file:\n",
         "    json.dump(final_json, file, indent=4)"
       ]
     },
@@ -449,14 +246,13 @@
       "outputs": [],
       "source": [
         "import yaml\n",
-        "with open('dicomseg_metadata_totalseg_v1.yaml', 'w') as file:\n",
-        "    yaml.dump(final_json, file)\n"
+        "with open('dicomseg_metadata_whole_slicerAsRef.yaml', 'w') as file:\n",
+        "    yaml.dump(final_json, file)"
       ]
     }
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "provenance": []
     },
     "kernelspec": {
