--- a/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/endToEndTotalSegmentatorNotebook.ipynb
@@ -511,6 +511,41 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def is_series_greater_than_800_slices(series_id: str) -> bool:\n",
+        "    \"\"\"\n",
+        "    Gets the SOPInstance count of the corresponding seriesInstanceUID from idc-index\n",
+        "    Refer to this query for additional columns available in idc-index!\n",
+        "    The reason why we are checking for 800 slices is whether to extract radiomics features\n",
+        "    using multiprocessor or sequentially. We validated that series with slices upto 800 slices\n",
+        "    work with out any issues with multiprocessor. However, above 800 we did find erratic\n",
+        "    behavior. While it is inefficient to do extract radiomics features sequentially, we\n",
+        "    expect it to work.\n",
+        "\n",
+        "    https://github.com/ImagingDataCommons/idc-index/blob/main/queries/idc_index.sql\n",
+        "\n",
+        "    Args:\n",
+        "    series_id: The DICOM Tag SeriesInstanceUID of the DICOM series to be processed.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    query = f\"\"\"\n",
+        "    SELECT\n",
+        "    instanceCount\n",
+        "    FROM index\n",
+        "    WHERE SeriesInstanceUID = '{series_id}'\n",
+        "    \"\"\"\n",
+        "    sopInstanceCount_df = idc_client.sql_query(query)\n",
+        "    if int(sopInstanceCount_df[\"instanceCount\"][0]) > 800:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "jvHzwKH8UNg3"
       },
@@ -940,10 +975,20 @@
         "    ]\n",
         "\n",
         "    # Define the function to be applied to each label\n",
-        "    func = partial(extract_radiomics_features_from_one_label, seg_file, ct_file, label_id_body_part_df)\n",
+        "    func = partial(\n",
+        "        extract_radiomics_features_from_one_label,\n",
+        "        seg_file,\n",
+        "        ct_file,\n",
+        "        label_id_body_part_df,\n",
+        "    )\n",
         "\n",
-        "    # Apply the function to all labels sequentially\n",
-        "    results = [func(label) for label in tqdm(labels)]\n",
+        "    if not is_series_greater_than_800_slices(series_id):\n",
+        "        # Use a multiprocessing pool to apply the function to all labels\n",
+        "        with multiprocessing.Pool() as pool:\n",
+        "            results = list(tqdm(pool.imap(func, labels), total=len(labels)))\n",
+        "    else:\n",
+        "        # Apply the function to all labels sequentially\n",
+        "        results = [func(label) for label in tqdm(labels)]\n",
         "\n",
         "    # Process the results\n",
         "    for body_part, mask_stats, raw_features in results:\n",
@@ -956,8 +1001,8 @@
         "        json.dump(stats, f, indent=4)\n",
         "\n",
         "    # Save the raw features to a separate output file\n",
-        "    with open(output_file.rsplit('.', 1)[0] + '_raw.json', \"w\") as f:\n",
-        "        json.dump(raw_stats, f, indent=4,default=ndarray_to_list)\n"
+        "    with open(output_file.rsplit(\".\", 1)[0] + \"_raw.json\", \"w\") as f:\n",
+        "        json.dump(raw_stats, f, indent=4, default=ndarray_to_list)\n"
       ]
     },
     {
