use different format for segment description use mutliprocessing when series size is upto 800 slices as the efficiency nearly dropped by half. i.e usually radiomics notebook takes about an hour for 12 series, but when extracted sequentially it was taking about 2 hours To solve this conundrum, I decided to use multiprocessing again when series size is upto 800 as we know from previous iteration that there is no erratic behavior. But for those greater than 800 slices, we can use sequential processing and give up efficiency as we noticed multiprocessing wasn't managing RAM well for larger series.

--- a/workflows/TotalSegmentator/Notebooks/dicomSEGMaps/slicerMappingsTotalSegmentator.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomSEGMaps/slicerMappingsTotalSegmentator.ipynb
@@ -2,10 +2,7 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
+      "metadata": {},
       "source": [
         "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/dicomSEGMaps/slicerMappingsTotalSegmentator.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
@@ -174,7 +171,7 @@
       },
       "outputs": [],
       "source": [
-        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/configs/TotalSegmentator/dicomseg_metadata_whole_slicerAsRef.json"
+        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/resources/dicomseg_metadata_whole_slicerAsRef.json"
       ]
     },
     {
@@ -222,7 +219,7 @@
       },
       "outputs": [],
       "source": [
-        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/Cloud-Resources-Workflows/main/configs/TotalSegmentator/distinct_vertebrae_ribs_rgb_colors_TotalSegmentator.csv"
+        "!wget -q https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/cf1905d5b113eeb89d883cb8d311b4bdbd656def/configs/TotalSegmentator/distinct_vertebrae_ribs_rgb_colors_TotalSegmentator.csv"
       ]
     },
     {
@@ -361,12 +358,15 @@
       "source": [
         "dcmqi_df=final_df[final_df['recommendedDisplayRGBValue'].notnull()]\n",
         "dcmqi_df = dcmqi_df[dcmqi_df.columns.drop(list(dcmqi_df.filter(regex='Anatomic')))]\n",
-        "dcmqi_df = dcmqi_df.drop(columns=['Structure'])\n",
         "dcmqi_df['labelID']=dcmqi_df['labelID'].astype(int)\n",
         "#dcmqi_df['recommendedDisplayRGBValue']=dcmqi_df['recommendedDisplayRGBValue'].astype(ast.literal_eval)\n",
-        "dcmqi_df['SegmentDescription'] = dcmqi_df.apply(\n",
+        "dcmqi_df['SegmentLabel'] = dcmqi_df.apply(\n",
         "    lambda row: row['SegmentedPropertyTypeModifierCodeSequence.CodeMeaning'] + ' ' + row['SegmentedPropertyTypeCodeSequence.CodeMeaning']\n",
         "    if pd.notnull(row['SegmentedPropertyTypeModifierCodeSequence.CodeMeaning']) else row['SegmentedPropertyTypeCodeSequence.CodeMeaning'], axis=1)\n",
+        "dcmqi_df['SegmentDescription'] = dcmqi_df.apply(\n",
+        "    lambda row: 'TotalSegmentator '+ str(row['labelID']) +' : '+ row['Structure'], axis=1)\n",
+        "dcmqi_df = dcmqi_df.drop(columns=['Structure'])\n",
+        "#dcmqi_df = dcmqi_df.drop(columns=['labelID'])\n",
         "dcmqi_df['SegmentAlgorithmName']='TotalSegmentator v1.5.6'\n",
         "dcmqi_df['SegmentAlgorithmType']='AUTOMATIC'\n",
         "# dcmqi_df['SegmentedPropertyCategoryCodeSequence.CodeValue']=dcmqi_df['SegmentedPropertyCategoryCodeSequence.CodeValue'].astype(str)\n",
@@ -436,7 +436,7 @@
         "    \"SeriesNumber\": \"42\",\n",
         "    \"segmentAttributes\": [merged_df_json]\n",
         "}\n",
-        "with open('dicomseg_metadata_totalseg_v1.json', 'w') as file:\n",
+        "with open('dicomseg_metadata_whole_slicerAsRef.json', 'w') as file:\n",
         "    json.dump(final_json, file, indent=4)"
       ]
     },
@@ -449,14 +449,13 @@
       "outputs": [],
       "source": [
         "import yaml\n",
-        "with open('dicomseg_metadata_totalseg_v1.yaml', 'w') as file:\n",
+        "with open('dicomseg_metadata_whole_slicerAsRef.yaml', 'w') as file:\n",
         "    yaml.dump(final_json, file)\n"
       ]
     }
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "provenance": []
     },
     "kernelspec": {
