--- a/workflows/TotalSegmentator/Notebooks/downloadDicomAndConvertNotebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/downloadDicomAndConvertNotebook.ipynb
@@ -4,7 +4,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/downloadDicomAndConvertNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/v1.1.0/workflows/TotalSegmentator/Notebooks/downloadDicomAndConvertNotebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -20,7 +20,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/images/download_convert.png\">"
+        "<img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.1.0/workflows/TotalSegmentator/Docs/images/download_convert.png\">"
       ]
     },
     {
@@ -61,7 +61,7 @@
         "* Docker images can be found @ https://hub.docker.com/repository/docker/imagingdatacommons/download_convert/tags\n",
         "* The link to dockerfile along with git commit hash used for building the docker image can be found in one of the layers called 'LABEL'\n",
         "\n",
-        "    <img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/images/download_convert_docker.png\">\n",
+        "    <img src=\"https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.1.0/workflows/TotalSegmentator/Docs/images/download_convert_docker.png\">\n",
         "\n",
         "* We use a python package called Papermill, that can run the notebook with out having to convert it to a python script. This allows us maintain one copy of code instead of two.\n",
         "* A sample papermill command is\n",
@@ -71,7 +71,7 @@
         "    * refer to https://papermill.readthedocs.io/en/latest/usage-execute.html#note-about-using-yaml on how to pass the yaml list\n",
         "    \n",
         "    Instead of passing the yaml list as a string, a yaml file can also be passed, as we do for SB-CGC\n",
-        "    [an example can be found here](!https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/Docs/sampleManifests/batch_1.yaml)\n",
+        "    [an example can be found here](!https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.1.0/workflows/TotalSegmentator/Docs/sampleManifests/batch_1.yaml)\n",
         "    <pre>\n",
         "    papermill downloadDicomAndConvertNotebook.ipynb outputdownloadDicomAndConvertNotebook.ipynb -f path_to_yamlListOfSeriesInstanceUIDs.yaml\n",
         "    </pre>\n"
