--- a/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb
@@ -6,7 +6,7 @@
         "id": "d-VtREb7d77t"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/v1.1.0/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ImagingDataCommons/CloudSegmentator/blob/main/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -86,7 +86,7 @@
       },
       "outputs": [],
       "source": [
-        "!wget https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/v1.1.0/workflows/TotalSegmentator/sqlQueries/nlstCohort.sql"
+        "!wget https://raw.githubusercontent.com/ImagingDataCommons/CloudSegmentator/main/workflows/TotalSegmentator/sqlQueries/nlstCohort.sql"
       ]
     },
     {
