assign ram and cpus based on series size add error handle saving raw radiomics features

--- a/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/Preprocessing.ipynb
@@ -193,6 +193,7 @@
         "\n",
         "# Analyze each file and add a row to the batch dataframe\n",
         "for i, df_batch in enumerate(dfs):\n",
+        "\n",
         "    # Create a list of seriesInstanceuids for this batch\n",
         "    series_list = df_batch['SeriesInstanceUID'].tolist()\n",
         "\n",
@@ -206,8 +207,17 @@
         "    with open(yaml_filename, 'w') as yaml_file:\n",
         "        yaml.dump(data_dict, yaml_file)\n",
         "\n",
+        "    max_sopinstancecount = df_batch['sopInstanceCount'].max()\n",
+        "\n",
         "    # Format the series list as a JSON dictionary\n",
         "    json_series_dict = json.dumps({\"SeriesInstanceUIDs\": series_list})\n",
+        "\n",
+        "    if max_sopinstancecount >= 300:\n",
+        "        cpu = 8\n",
+        "        ram = 32\n",
+        "    else:\n",
+        "        cpu = 4\n",
+        "        ram = 16\n",
         "\n",
         "    # Create a new row with the batch information and the series list\n",
         "    new_row = pd.DataFrame({\n",
