--- a/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
+++ b/workflows/TotalSegmentator/Notebooks/dicomsegAndRadiomicsSR_Notebook.ipynb
@@ -897,6 +897,33 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def log_failed_to_save_raw_radiomics_features(series_id: str) -> None:\n",
+        "    \"\"\"\n",
+        "    Log an error message when the raw radiomics features for a given series fail to save.\n",
+        "\n",
+        "    Args:\n",
+        "        series_id: The ID of the series.\n",
+        "\n",
+        "    Returns:\n",
+        "        None. The error message is written to a log file.\n",
+        "    \"\"\"\n",
+        "    # Define the path to the log file\n",
+        "    log_file_path = 'radiomics_error_file.txt'\n",
+        "\n",
+        "    # Define the error message\n",
+        "    error_message = f\"Error: Failed to save raw radiomics features for series {series_id}\\n\"\n",
+        "\n",
+        "    # Append the error message to the log file\n",
+        "    with open(log_file_path, 'a') as f:\n",
+        "        f.write(error_message)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "-uP90O6id-Aq"
@@ -955,10 +982,12 @@
         "    # Save the results to the output file\n",
         "    with open(output_file, \"w\") as f:\n",
         "        json.dump(stats, f, indent=4)\n",
-        "\n",
-        "    # Save the raw features to a separate output file\n",
-        "    with open(output_file.rsplit(\".\", 1)[0] + \"_raw.json\", \"w\") as f:\n",
-        "        json.dump(raw_stats, f, indent=4, default=ndarray_to_list)\n"
+        "    try:\n",
+        "        # Save the raw features to a separate output file\n",
+        "        with open(output_file.rsplit(\".\", 1)[0] + \"_raw.json\", \"w\") as f:\n",
+        "            json.dump(raw_stats, f, indent=4, default=ndarray_to_list)\n",
+        "    except:\n",
+        "        log_failed_to_save_raw_radiomics_features(series_id)\n"
       ]
     },
     {
@@ -1829,7 +1858,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.13"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
